--- a/styles/Global.css
+++ b/styles/Global.css
@@ -402,7 +402,7 @@ p{
     #cart-Popup{
         width: calc(var(--sreen-size) / 1.1);
         right: 0;
-        left: calc(var(--sreen-size) - calc(var(--sreen-size) /1.1));
+        left: 5%;
     }
 }
 
